updated scroll example

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   margin: 0;
 }
 
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   overflow: hidden;
 }
