--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,23 +1,32 @@
 #navBar {
-    padding: 10px;
+    height: 70px;
     position: fixed;
-    top: 0;
     z-index: 1;
-    width: 100%;
+    width: 100vw;
     background-color: aliceblue;
-    font-size: larger;
     font-size: calc(10px + 2vmin);
-    
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #navBar a{
-    font-family: 'Arial Narrow Bold', sans-serif;
     text-decoration: none;
     color: black;
-    word-spacing: 5px;
+    padding: 10px;
+    font-weight: bold;
 }
 
 #navBar a:hover{
     color: Silver;
     text-decoration: none;
+}
+
+#linksContainer{
+    position: absolute;
+    bottom: 0px;
+    
+}
+
+#links{
+    text-align: center;
 }
