--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
-*{
+* {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
-a, a:hover, a:focus, a:active {
+a,
+a:hover,
+a:focus,
+a:active {
   text-decoration: none;
   color: inherit;
 }
@@ -18,4 +22,27 @@ p {
 
 .App {
   text-align: center;
+  width: 100%;
+  background: linear-gradient(-45deg, #EE7742, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 400% 400%;
+  position: relative;
+  animation: change 10s ease-in-out infinite;
+}
+
+.boxBox {
+  border: 4px solid white;
+  min-height: 60vh;
+  min-width: 60vh;
+}
+
+.fadeIn {
+  -webkit-animation: slide-in-bck-center 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-bck-center 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.content {
+  margin-top: auto;
+  margin-bottom: auto;
+  text-align: center;
+  transform: translate(0%, 180px);
 }
