--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -1,3 +1,7 @@
+#cardSetup {
+  padding: 10px;
+}
+
 .linkButtons {
   color: white;
   font-size: 14px;
@@ -10,16 +14,18 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-#pBContainer {
+.pBContainer {
   width: 220px;
   height: 300px;
-  margin: 20px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.452);
 }
 
-#cardLinks {
+
+
+#projectLinks {
+  padding-top: 40px;
   display: flex;
   justify-content: space-between;
 }
@@ -43,7 +49,7 @@
 
 #image img {
   width: 100%;
-  height: 128px;
+  height: 118px;
   border-bottom: silver solid 2px;
   border-top: silver solid 2px;
   transition: all 1s ease;
@@ -53,18 +59,43 @@
   transform: scale(1.1);
 }
 
+#tap {
+  padding-right: 14px;
+  color: black;
+  font-weight: bold;
+  font-size: small;
+  text-align: right;
+}
+
+#pre {
+  padding-left: 14px;
+  color: black;
+  font-weight: bold;
+  font-size: small;
+  text-align: left;
+}
+
+
+#summery {
+  font-size: medium;
+  padding: 4px;
+  color: rgb(75, 75, 75);
+  font-size: 16px;
+  font-family: sans-serif;
+  border-radius: 0px 0px 20px 20px;
+  width: 220px;
+  overflow: hidden;
+}
+
 #projectInfo {
   font-size: medium;
   padding: 4px;
-  color: dimgray;
-  font-size: 12px;
-  font-family: Tahoma, sans-serif;
+  color: rgb(0, 0, 0);
+  font-size: 14px;
   border-radius: 0px 0px 20px 20px;
   width: 220px;
-  text-overflow: clip;
-  white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  height: 90px;
 }
 
 #techStack {
@@ -79,6 +110,19 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.452);
 }
 
+#tools {
+  background-color: rgba(255, 255, 255, 0.616);
+  width: 160px;
+  border-radius: 25px 5px 5px 25px;
+  border: rgb(138, 138, 138) solid 1px;
+  position: relative;
+  text-align: right;
+  left: 64px;
+  top: 14px;
+  font-size: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.452);
+}
+
 #techStack img {
   padding-top: 4px;
   width: 24px;
@@ -87,4 +131,9 @@
 #tools img {
   padding: 4px;
   width: 30px;
+}
+
+.flipper {
+  padding: 4px;
+  border-radius: 10px;
 }
