--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -22,7 +22,13 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.452);
 }
 
-
+/* .pBContainer {
+  width: 250px;
+  height: 300px;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.452);
+} */
 
 #projectLinks {
   padding-top: 40px;
@@ -31,14 +37,20 @@
 }
 
 #title {
+  /* position: absolute; */
+  border-radius: 10px 10px 0px 0px;
+  z-index: 1;
+  width: 100%;
   font-size: x-large;
-  padding-top: 12px;
+  padding-top: 6px;
   padding-bottom: 12px;
   color: black;
   font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 #imageframe {
+  border-radius: 10px 10px 0px 0px;
   overflow: hidden;
 }
 
@@ -60,11 +72,15 @@
 }
 
 #tap {
-  padding-right: 14px;
-  color: black;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  padding-right: 8px;
+  color: rgb(255, 255, 255);
   font-weight: bold;
-  font-size: small;
+  font-size: medium;
   text-align: right;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #pre {
@@ -74,7 +90,6 @@
   font-size: small;
   text-align: left;
 }
-
 
 #summery {
   font-size: medium;
@@ -100,12 +115,12 @@
 
 #techStack {
   background-color: rgba(255, 255, 255, 0.616);
-  width: 90px;
+  width: 140px;
   border-radius: 5px 25px 25px 5px;
   border: rgb(138, 138, 138) solid 1px;
   position: relative;
   left: -8px;
-  top: -14px;
+  top: -8px;
   font-size: 20px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.452);
 }
@@ -118,7 +133,7 @@
   position: relative;
   text-align: right;
   left: 64px;
-  top: 14px;
+  top: 8px;
   font-size: 20px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.452);
 }
