--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -133,7 +133,7 @@
   position: relative;
   text-align: right;
   left: 64px;
-  top: 8px;
+  top: 19px;
   font-size: 20px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.452);
 }
@@ -146,6 +146,14 @@
 #tools img {
   padding: 4px;
   width: 30px;
+}
+
+#toolsTitle {
+  right: 8px;
+  position: absolute;
+  color: black;
+  font-weight: bold;
+  font-size: small;
 }
 
 .flipper {
