--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@ p {
   border: 4px solid white;
   min-height: 60vh;
   min-width: 60vh;
+  position: relative;
 }
 
 @media (max-width: 550px) {
@@ -53,4 +54,10 @@ p {
 .welcomeBox {
   background-image: url(./img/profile.png);
   background-size: cover;
+}
+
+.gitLink {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
 }
